# lightech

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
app/app/: helpers.py  settings.py  urls.py
app/payment/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
app/payment/migrations/: 0001_initial.py
app/payment/tests/: test_get_user_balance.py  test_income_user_balance.py  test_spend_balance.py
app/user/: admin.py  models.py  services.py  urls.py  views.py
app/user/migrations/: 0001_initial.py
app/user/tests/: test_registration_or_authentication_user.py  test_user_manager.py
